Fix col header alignment issue

--- a/src/flow.styl
+++ b/src/flow.styl
@@ -264,6 +264,9 @@ table
 .flow-small-caps
   smallcaps()
 
+.flow-left
+  text-align left
+
 .flow-right
   text-align right
 
